update: 引入bootstrap icon cdn / indexview.vue

--- a/src/assets/all.css
+++ b/src/assets/all.css
@@ -108,3 +108,11 @@ video {
   margin: 16px 0 4px 0;
   display: block;
 }
+
+.border-style {
+  border: 3px solid black;
+}
+
+.bg-white {
+  background-color: white;
+}
